[package]
name = "acetic"
version = "0.1.0"
edition = "2021"
description = "A steganographic and image processing CLI."

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
image = "0.24.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
num = "0.4.0"
rustfft = "6.1.0"
chrono = "0.4.23"
ring = "0.16.20"
orion = "0.17.2"
